# grader

./: .gitignore  CODESPACE_GUIDE.md  Dockerfile  README.md  fly.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml
backend/src/: config.rs  error.rs  main.rs  marking-guidelines-default.md
backend/src/handlers/: grading.rs  health.rs  mod.rs  submissions.rs
backend/src/models/: mod.rs
backend/src/services/: ai.rs  database.rs  mod.rs  pdf.rs  storage.rs
deployment/: Dockerfile  fly.toml
frontend/: _quarto.yml  chemistry-exam.qmd  package.json
frontend/assets/css/: exam-styles.css
frontend/assets/js/: exam-interface.js
marking-guidelines/: review-prompt.md
scripts/: deploy.sh  setup.sh
